--- a/UE/S1/IPI/projet/code/README
+++ b/UE/S1/IPI/projet/code/README
@@ -1,21 +1,26 @@
 Le rapport se trouve dans "rapport.pdf"
 
-Le code dans 'exo1.c', 'exo2.c', 'exo3.c', 'customlibs/*.c'
+Le code est dans 'exo1.c', 'exo2.c', 'exo3.c', 'customlibs/*.c'
 
 Pour que les fonctions 'fork()' et 'kill()' compile sans warning,
 j'ai du ajouter:
 
 # define _DEFAULT_SOURCE
 
-dans customlibs/lab.h
+dans 'customlibs/lab.h'
 
-ca compile sans warning chez moi... en esperant que tout
+Ca compile sans warning chez moi... en esperant que tout
 se passe bien de votre coté
 
-Pour tester il faut déplacer les fichiers de la versio V2 du projet, à la racine de ce dossier:
+Les fichiers de tests sont ceux de la V2 du projet
+et n'ont pas été modifié (à savoir):
 	- Makefile
 	- exec1.sh, exec2.sh, exec3.sh
 	- dossier 'tests'
 	- check_solution.py
+
+Le dossier '.bkp' contient ma 1ère implementation, elle permet
+d'illustrer mon rapport (comparatifs de performances).
+MAIS c'est bien le code à la racine du dossier qui correspond à mon rendu final.
 
 Romain PEREIRA
